--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,34 +102,35 @@ LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Player/new/NewMaterial.NewMaterial
-OpenAssetsAtExit=/Game/Enemy/AI_Hit.AI_Hit
-OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
+OpenAssetsAtExit=/Game/Enemy/SK_Character_PhysicsAsset.SK_Character_PhysicsAsset
+OpenAssetsAtExit=/Game/Enemy/SK_Character_Hotdog.SK_Character_Hotdog
+OpenAssetsAtExit=/Game/Enemy/AI.AI
+OpenAssetsAtExit=/Game/Enemy/AI2.AI2
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/AI_Hit
-MRUItem1=/Game/Player/new/PLayer
-MRUItem2=/Game/Player/new/NewMaterial_Inst
-MRUItem3=/Game/Player/new/NewMaterial
-MRUItem4=/Game/Player/new/PlayerTexture/MI_TPC_Camo_001_002
-MRUItem5=/Game/Player/new/PlayerTexture/MI_TPC_Camo_001_001
-MRUItem6=/Game/Player/PLayer
-MRUItem7=/Game/Player/new/Anim_TPC_Base
-MRUItem8=/Game/InventorySystem/PickUpBase
-MRUItem9=/Game/InventorySystem/PickUpUI
-MRUItem10=/Game/InventorySystem/InventoryComponent
-MRUItem11=/Game/PlayerUI
-MRUItem12=/Game/InventorySystem/InventoryUI
-MRUItem13=/Game/InventorySystem/ItemSlotUI
-MRUItem14=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
-MRUItem15=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
-MRUItem16=/Game/AK47/tpc_rifle_reload_out_of_ammo_Anim
-MRUItem17=/Game/Player/new/AimOffset
-MRUItem18=/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim
-MRUItem19=/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim
+MRUItem0=/Game/Enemy/SK_Character_Hotdog
+MRUItem1=/Game/Enemy/SK_Character_PhysicsAsset
+MRUItem2=/Game/Enemy/AI2
+MRUItem3=/Game/Enemy/AI
+MRUItem4=/Game/InventorySystem/InventoryComponent
+MRUItem5=/Game/GameOver
+MRUItem6=/Game/Player/new/PLayer
+MRUItem7=/Game/PlayerUI
+MRUItem8=/Game/Enemy/AI_Anim
+MRUItem9=/Game/Enemy/敌人站立1
+MRUItem10=/Game/Player/SK_Mannequin_Skeleton
+MRUItem11=/Game/Enemy/AI_Anim1
+MRUItem12=/Game/Enemy/敌人行走1
+MRUItem13=/Game/Enemy/敌人攻击1
+MRUItem14=/Game/Enemy/敌人攻击
+MRUItem15=/Game/敌人攻击
+MRUItem16=/Game/敌人行走
+MRUItem17=/Game/AI_Anim
+MRUItem18=/Game/Enemy/敌人攻击_Montage
+MRUItem19=/Game/Player/new/SK_third_person_character
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1187,20 +1188,51 @@ MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 MaterialEditorInstanceConstant.ParameterGroups=True
+elevetor_Actor_C.TransformCommon=True
+elevetor_Actor_C.Rendering=True
+elevetor_Actor_C.Replication=True
+elevetor_Actor_C.Collision=True
+elevetor_Actor_C.Input=True
+elevetor_Actor_C.Actor=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+AI_Anim1_C.默认=True
+AI_Anim1_C.RootMotion=True
+AI_Anim1_C.Notifies=True
+NewMap_C.Tick=True
+NewMap_C.Replication=True
+NewMap_C.Actor=True
+NewMap_C.Input=True
+GameOver_C.Appearance=True
+GameOver_C.Designer=True
+GameOver_C.Input=True
+GameOver_C.Interaction=True
+GameOver_C.Performance=True
+GameOver_C.Layout=True
+GameOver_C.Behavior=True
+GameOver_C.Render Transform=True
+GameOver_C.Accessibility=True
+GameOver_C.Clipping=True
+GameOver_C.Navigation=True
+GameOver_C.Localization=True
 
 [AssetEditorToolkitTabLocation]
-/Game/InventorySystem/InventoryComponent.InventoryComponent=1
+/Game/InventorySystem/InventoryComponent.InventoryComponent=0
 /Game/InventorySystem/DragDrop.DragDrop=0
 /Game/PLayer.PLayer=0
 /Game/InventorySystem/InventoryUI.InventoryUI=1
-/Game/PlayerUI.PlayerUI=1
+/Game/PlayerUI.PlayerUI=0
 /Game/InventorySystem/DragIcon.DragIcon=1
 /Game/InventorySystem/ItemSlotUI.ItemSlotUI=1
 /Game/InventorySystem/PickUpUI.PickUpUI=1
 /Game/InventorySystem/ConfrimUI.ConfrimUI=1
-/Game/Enemy/AI_Hit.AI_Hit=1
+/Game/Enemy/AI_Hit.AI_Hit=0
 /Game/Enemy/AI.AI=0
-/Game/Enemy/AI2.AI2=1
+/Game/Enemy/AI2.AI2=0
 /Game/Enemy/realAI/AI3.AI3=0
 /Game/Enemy/realAI/NewBlackboardData.NewBlackboardData=0
 /Game/Enemy/realAI/AI_Controller.AI_Controller=0
@@ -1239,6 +1271,21 @@ MaterialEditorInstanceConstant.ParameterGroups=True
 /Game/Player/new/Anim_TPC_Base.Anim_TPC_Base=0
 /Game/AK47/S_assault_rifle_02_reload_out_of_ammo.S_assault_rifle_02_reload_out_of_ammo=0
 /Game/InventorySystem/PickUpBase.PickUpBase=1
+/Game/Enemy/SK_Character_Skeleton.SK_Character_Skeleton=0
+/Game/Player/new/NewMaterial.NewMaterial=0
+/Game/Player/new/PLayer.PLayer=0
+/Game/Enemy/T_Polygon_City_Characters_01_A.T_Polygon_City_Characters_01_A=0
+/Game/Enemy/Mat_Polygon_City_Char_01.Mat_Polygon_City_Char_01=0
+/Game/AI_Anim.AI_Anim=1
+/Game/敌人行走.敌人行走=1
+/Game/敌人攻击.敌人攻击=1
+/Game/Enemy/敌人攻击1.敌人攻击1=0
+/Game/Enemy/敌人行走1.敌人行走1=1
+/Game/Enemy/SK_Character_Hotdog.SK_Character_Hotdog=0
+/Game/Enemy/敌人站立1.敌人站立1=0
+/Game/Enemy/AI_Anim1.AI_Anim1=0
+/Game/NewMap.NewMap:PersistentLevel.NewMap=1
+/Game/GameOver.GameOver=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1345,7 +1392,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1365,17 +1412,17 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ActorComponent=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
@@ -1385,14 +1432,16 @@ ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-PLayer_C="\"Object.is reloading\" "
-Character="\"Object.is reloading\" "
-Pawn="\"Object.is reloading\" "
+PLayer_C="\"Object.Health\" "
+Character="\"Object.As AI Anim 1\" "
+Pawn="\"Object.As AI Anim 1\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
+AI_C="\"Object.As AI Anim 1\" "
+AI2_C="\"Object.Mesh\" "
 
 [MessageLog]
 LastLogListing=PIE
@@ -1449,7 +1498,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [RootWindow]
 ScreenPosition=X=633.000 Y=256.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1476,7 +1525,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Enemy
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1512,6 +1561,8 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
 UNR=C:/Users/DELL/Documents/GitHub/UE4/Content
@@ -2418,12 +2469,12 @@ SourceControlWindows.TimeStamp=2022.10.15-08.38.50
 SourceControlWindows.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.10.15-08.38.44
 ExternalImagePicker.LastCompileMethod=Unknown
-NullDrv.TimeStamp=2022.10.15-08.38.47
-NullDrv.LastCompileMethod=Unknown
-BlueprintNativeCodeGen.TimeStamp=2022.10.15-08.38.40
-BlueprintNativeCodeGen.LastCompileMethod=Unknown
-BlueprintCompilerCppBackend.TimeStamp=2022.10.15-08.38.40
-BlueprintCompilerCppBackend.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2022.10.15-08.38.46
+LauncherServices.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2022.10.15-08.38.51
+UATHelper.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.10.15-08.38.50
+TextureEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2459,7 +2510,7 @@ TimelineEnabledSnaps=MontageSection
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,
 PLayer_C=
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
 Anim_TPC_Base_C=
@@ -2472,6 +2523,10 @@ DragDropOperation=
 PlayerUI_C=
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
+AI_Anim_C=
+AI_C=
+AI_Anim1_C=
+AI2_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
@@ -2513,6 +2568,10 @@ AssetManagerSettings=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2573,4 +2632,7 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[MaterialEditor]
+PrimType=1
 
