--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,22 +102,19 @@ LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Enemy/SK_Character_PhysicsAsset.SK_Character_PhysicsAsset
-OpenAssetsAtExit=/Game/Enemy/SK_Character_Hotdog.SK_Character_Hotdog
-OpenAssetsAtExit=/Game/Enemy/AI.AI
-OpenAssetsAtExit=/Game/Enemy/AI2.AI2
+OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/SK_Character_Hotdog
-MRUItem1=/Game/Enemy/SK_Character_PhysicsAsset
-MRUItem2=/Game/Enemy/AI2
-MRUItem3=/Game/Enemy/AI
-MRUItem4=/Game/InventorySystem/InventoryComponent
-MRUItem5=/Game/GameOver
-MRUItem6=/Game/Player/new/PLayer
+MRUItem0=/Game/Player/new/PLayer
+MRUItem1=/Game/Enemy/SK_Character_Hotdog
+MRUItem2=/Game/Enemy/SK_Character_PhysicsAsset
+MRUItem3=/Game/Enemy/AI2
+MRUItem4=/Game/Enemy/AI
+MRUItem5=/Game/InventorySystem/InventoryComponent
+MRUItem6=/Game/GameOver
 MRUItem7=/Game/PlayerUI
 MRUItem8=/Game/Enemy/AI_Anim
 MRUItem9=/Game/Enemy/敌人站立1
@@ -1219,6 +1216,13 @@ GameOver_C.Accessibility=True
 GameOver_C.Clipping=True
 GameOver_C.Navigation=True
 GameOver_C.Localization=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1432,19 +1436,19 @@ ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-PLayer_C="\"Object.Health\" "
-Character="\"Object.As AI Anim 1\" "
-Pawn="\"Object.As AI Anim 1\" "
+PLayer_C=
+Character=
+Pawn=
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
 AI_C="\"Object.As AI Anim 1\" "
-AI2_C="\"Object.Mesh\" "
+AI2_C=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
