--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ Saved
 *.xcworkspace
 Saved/AutoScreenshot.png
 Saved/Logs/p1.log
+Saved/AutoScreenshot.png
+Intermediate/CachedAssetRegistry.bin
+Saved/Config/Windows/EditorPerProjectUserSettings.ini
+Saved/Config/Windows/Engine.ini
+Saved/Logs/p1.log
