--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1990
+NewWindowWidth=2000
 NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -102,23 +102,23 @@ MRUItem2=/Game/Begin
 LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Bullet.Bullet
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Bullet
-MRUItem1=/Game/NewBlueprint
-MRUItem2=/Game/Fantastic_Village_Pack/maps/map_village_night
-MRUItem3=/Game/Map/MaterialInstances/Material/M_Master_landscape
-MRUItem4=/Game/Fantastic_Village_Pack/materials/MI_landscape
-MRUItem5=/Game/NewMap
-MRUItem6=/Game/Begin
-MRUItem7=/Game/Map/NewMap_sharedassets/Gravel2_LayerInfo
-MRUItem8=/Game/Map/Farmfield_LayerInfo
-MRUItem9=/Game/Player/new/PLayer
+MRUItem0=/Game/Player/new/PLayer
+MRUItem1=/Game/Bullet
+MRUItem2=/Game/NewBlueprint
+MRUItem3=/Game/Fantastic_Village_Pack/maps/map_village_night
+MRUItem4=/Game/Map/MaterialInstances/Material/M_Master_landscape
+MRUItem5=/Game/Fantastic_Village_Pack/materials/MI_landscape
+MRUItem6=/Game/NewMap
+MRUItem7=/Game/Begin
+MRUItem8=/Game/Map/NewMap_sharedassets/Gravel2_LayerInfo
+MRUItem9=/Game/Map/Farmfield_LayerInfo
 MRUItem10=/Game/CWalk
 MRUItem11=/Game/maps/MI_landscape
 MRUItem12=/Game/Enemy/SK_Character_Hotdog
@@ -1494,7 +1494,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1534,9 +1534,9 @@ ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-PLayer_C=
-Character=
-Pawn=
+PLayer_C="\"Object.弹夹容量标准\" "
+Character="\"Object.弹夹容量标准\" "
+Pawn="\"Object.弹夹容量标准\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
