--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=2000
+NewWindowWidth=2230
 NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -103,6 +103,13 @@ LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Enemy/AI.AI
+OpenAssetsAtExit=/Game/Enemy/realAI/AI3.AI3
+OpenAssetsAtExit=/Game/Enemy/realAI/AI_Controller.AI_Controller
+OpenAssetsAtExit=/Game/Enemy/realAI/NewBehaviorTree.NewBehaviorTree
+OpenAssetsAtExit=/Game/Enemy/realAI/NewBlackboardData.NewBlackboardData
+OpenAssetsAtExit=/Game/NewMap.NewMap:PersistentLevel.NewMap
+OpenAssetsAtExit=/Game/Enemy/realAI/走向玩家.走向玩家
 OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 
 [PluginBrowser]
@@ -110,25 +117,25 @@ InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Player/new/PLayer
-MRUItem1=/Game/Bullet
-MRUItem2=/Game/NewBlueprint
-MRUItem3=/Game/Fantastic_Village_Pack/maps/map_village_night
-MRUItem4=/Game/Map/MaterialInstances/Material/M_Master_landscape
-MRUItem5=/Game/Fantastic_Village_Pack/materials/MI_landscape
-MRUItem6=/Game/NewMap
-MRUItem7=/Game/Begin
-MRUItem8=/Game/Map/NewMap_sharedassets/Gravel2_LayerInfo
-MRUItem9=/Game/Map/Farmfield_LayerInfo
-MRUItem10=/Game/CWalk
-MRUItem11=/Game/maps/MI_landscape
-MRUItem12=/Game/Enemy/SK_Character_Hotdog
-MRUItem13=/Game/Enemy/SK_Character_PhysicsAsset
-MRUItem14=/Game/Enemy/AI2
-MRUItem15=/Game/Enemy/AI
-MRUItem16=/Game/InventorySystem/InventoryComponent
-MRUItem17=/Game/GameOver
-MRUItem18=/Game/PlayerUI
-MRUItem19=/Game/Enemy/AI_Anim
+MRUItem1=/Game/Enemy/realAI/走向玩家
+MRUItem2=/Game/Enemy/realAI/NewBehaviorTree
+MRUItem3=/Game/Enemy/realAI/NewBlackboardData
+MRUItem4=/Game/Enemy/realAI/AI_Controller
+MRUItem5=/Game/Enemy/realAI/AI3
+MRUItem6=/Game/Enemy/AI
+MRUItem7=/Game/Bullet
+MRUItem8=/Game/NewBlueprint
+MRUItem9=/Game/Fantastic_Village_Pack/maps/map_village_night
+MRUItem10=/Game/Map/MaterialInstances/Material/M_Master_landscape
+MRUItem11=/Game/Fantastic_Village_Pack/materials/MI_landscape
+MRUItem12=/Game/NewMap
+MRUItem13=/Game/Begin
+MRUItem14=/Game/Map/NewMap_sharedassets/Gravel2_LayerInfo
+MRUItem15=/Game/Map/Farmfield_LayerInfo
+MRUItem16=/Game/CWalk
+MRUItem17=/Game/maps/MI_landscape
+MRUItem18=/Game/Enemy/SK_Character_Hotdog
+MRUItem19=/Game/Enemy/SK_Character_PhysicsAsset
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1485,8 +1492,9 @@ MovieRendererName=
 
 [DetailCategoriesAdvanced]
 Overlay.Behavior=False
-PropertyWrapper.Variable=True
+PropertyWrapper.Variable=False
 SphereComponent.Rendering=False
+K2Node_VariableGet.Variable=False
 
 [DetailPropertyExpansion]
 Border="\"Object.Render Transform.RenderTransform\" "
@@ -1494,7 +1502,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Blackboard\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1512,9 +1520,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
@@ -1522,35 +1530,39 @@ EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
 K2Node=
 CapsuleComponent=
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-PLayer_C="\"Object.弹夹容量标准\" "
-Character="\"Object.弹夹容量标准\" "
-Pawn="\"Object.弹夹容量标准\" "
+PLayer_C="\"Object.Weapon Damage\" "
+Character="\"Object.Mesh\" "
+Pawn="\"Object.Mesh\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
-AI_C="\"Object.As AI Anim 1\" "
+AI_C=
 AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C="\"Object.As PLayer\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+NewMap_C="\"Object.AI数组\" "
+LevelScriptActor="\"Object.AI数组\" "
+AI3_C="\"Object.Mesh\" "
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1603,7 +1615,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [RootWindow]
 ScreenPosition=X=633.000 Y=256.000
-WindowSize=X=1285.000 Y=725.000
+WindowSize=X=1295.000 Y=735.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1631,7 +1643,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Player/new
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1639,7 +1651,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.047945
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -2629,7 +2641,7 @@ PickUpUI_C=
 InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,
 AI_Anim_C=
 AI_C=
@@ -2639,6 +2651,8 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialInstanceConstant=
 Bullet_C=
 SphereComponent=SphereComponent.Collision.Collision,
+NewMap_C=
+AI3_C=SkeletalMeshComponent.Collision.Collision,
 
 [PlacementMode]
 RecentlyPlaced=/Game/NewBlueprint.NewBlueprint;
@@ -2682,6 +2696,7 @@ AssetManagerSettings=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+ChangeVariableType_Warning=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
