--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=2230
+NewWindowWidth=2380
 NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -103,39 +103,34 @@ LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Enemy/AI.AI
 OpenAssetsAtExit=/Game/Enemy/realAI/AI3.AI3
-OpenAssetsAtExit=/Game/Enemy/realAI/AI_Controller.AI_Controller
-OpenAssetsAtExit=/Game/Enemy/realAI/NewBehaviorTree.NewBehaviorTree
-OpenAssetsAtExit=/Game/Enemy/realAI/NewBlackboardData.NewBlackboardData
-OpenAssetsAtExit=/Game/NewMap.NewMap:PersistentLevel.NewMap
-OpenAssetsAtExit=/Game/Enemy/realAI/走向玩家.走向玩家
+OpenAssetsAtExit=/Game/Enemy/AI.AI
 OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/new/PLayer
-MRUItem1=/Game/Enemy/realAI/走向玩家
-MRUItem2=/Game/Enemy/realAI/NewBehaviorTree
-MRUItem3=/Game/Enemy/realAI/NewBlackboardData
-MRUItem4=/Game/Enemy/realAI/AI_Controller
-MRUItem5=/Game/Enemy/realAI/AI3
+MRUItem0=/Game/Enemy/敌人攻击1_Montage
+MRUItem1=/Game/Player/new/PLayer
+MRUItem2=/Game/Enemy/敌人攻击_Montage
+MRUItem3=/Game/Enemy/敌人攻击1
+MRUItem4=/Game/Enemy/AI_Anim1
+MRUItem5=/Game/Enemy/AI2
 MRUItem6=/Game/Enemy/AI
-MRUItem7=/Game/Bullet
-MRUItem8=/Game/NewBlueprint
-MRUItem9=/Game/Fantastic_Village_Pack/maps/map_village_night
-MRUItem10=/Game/Map/MaterialInstances/Material/M_Master_landscape
-MRUItem11=/Game/Fantastic_Village_Pack/materials/MI_landscape
-MRUItem12=/Game/NewMap
-MRUItem13=/Game/Begin
-MRUItem14=/Game/Map/NewMap_sharedassets/Gravel2_LayerInfo
-MRUItem15=/Game/Map/Farmfield_LayerInfo
-MRUItem16=/Game/CWalk
-MRUItem17=/Game/maps/MI_landscape
-MRUItem18=/Game/Enemy/SK_Character_Hotdog
-MRUItem19=/Game/Enemy/SK_Character_PhysicsAsset
+MRUItem7=/Game/Enemy/realAI/AI3
+MRUItem8=/Game/Enemy/realAI/走向玩家
+MRUItem9=/Game/Enemy/realAI/NewBehaviorTree
+MRUItem10=/Game/Enemy/realAI/NewBlackboardData
+MRUItem11=/Game/Enemy/realAI/AI_Controller
+MRUItem12=/Game/Bullet
+MRUItem13=/Game/NewBlueprint
+MRUItem14=/Game/Fantastic_Village_Pack/maps/map_village_night
+MRUItem15=/Game/Map/MaterialInstances/Material/M_Master_landscape
+MRUItem16=/Game/Fantastic_Village_Pack/materials/MI_landscape
+MRUItem17=/Game/NewMap
+MRUItem18=/Game/Begin
+MRUItem19=/Game/Map/NewMap_sharedassets/Gravel2_LayerInfo
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1502,7 +1497,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object="\"Object.Blackboard\" "
+Object="\"Object.SkeletalMeshes\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1520,31 +1515,31 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
-DataAsset="\"Object.Blackboard\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent=
-SkinnedMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
 K2Node=
 CapsuleComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
 PLayer_C="\"Object.Weapon Damage\" "
-Character="\"Object.Mesh\" "
-Pawn="\"Object.Mesh\" "
+Character="\"Object.As PLayer\" "
+Pawn="\"Object.As PLayer\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
@@ -1555,11 +1550,12 @@ AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C="\"Object.As PLayer\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 NewMap_C="\"Object.AI数组\" "
 LevelScriptActor="\"Object.AI数组\" "
-AI3_C="\"Object.Mesh\" "
+AI3_C="\"Object.As PLayer\" "
+AI_Anim1_C=
 
 [MessageLog]
 LastLogListing=PIE
@@ -2644,7 +2640,7 @@ PlayerUI_C=
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,
 AI_Anim_C=
-AI_C=
+AI_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,
 AI_Anim1_C=
 AI2_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -2652,7 +2648,7 @@ MaterialInstanceConstant=
 Bullet_C=
 SphereComponent=SphereComponent.Collision.Collision,
 NewMap_C=
-AI3_C=SkeletalMeshComponent.Collision.Collision,
+AI3_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/NewBlueprint.NewBlueprint;
